--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -1,9 +1,9 @@
-CC		:= c++
-NAME	:= Intern
-HEADS	:= $(shell find . -name "*.hpp")
-SRCS	:= $(shell find . -name "*.cpp")
-OBJS	:= $(SRCS:.cpp=.o)
-CFLAGS	:= -Wall -Werror -Wextra -std=c++98
+CC		= c++
+NAME	= Intern
+HEADS	= AForm.hpp Bureaucrat.hpp Intern.hpp PresidentialPardonForm.hpp RobotomyRequestForm.hpp ShrubberyCreationForm.hpp 
+SRCS	= AForm.cpp Bureaucrat.cpp Form.cpp Intern.cpp main.cpp PresidentialPardonForm.cpp RobotomyRequestForm.cpp ShrubberyCreationForm.cpp 
+OBJS	= $(SRCS:.cpp=.o)
+CFLAGS	= -Wall -Werror -Wextra -std=c++98
 
 all		: $(NAME)
 
